Add figures for Au6.

--- a/scripts/Star Formation.ipynb
+++ b/scripts/Star Formation.ipynb
@@ -10,19 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -33,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,16 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "SAMPLE = [f\"au{i}_or_l4\" for i in settings.groups[\"Included\"]]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,56 +130,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figures"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(7, 8))\n",
-    "gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
-    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "SIMULATION = \"au6_or_l4\"\n",
+    "# SIMULATION = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SAMPLE = [f\"au{i}_or_l4\" for i in settings.groups[\"Included\"]]\n",
+    "SAMPLE = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if SIMULATION:\n",
+    "    fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
     "\n",
-    "for ax in axs.flatten():\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
-    "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
+    "    ax.set_axisbelow(True)\n",
+    "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
+    "\n",
     "    ax.set_xlim(0, 14)\n",
-    "    ax.set_ylim(0.1, 20),\n",
     "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
+    "    ax.set_xlabel(\"Time [Gyr]\")\n",
+    "\n",
+    "    ax.set_ylim(0.1, 20)\n",
     "    ax.set_yscale(\"log\")\n",
     "    ax.set_yticks([0.1, 1, 10])\n",
     "    ax.set_yticklabels([0.1, 1, 10])\n",
-    "    if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
-    "        ax.set_xlabel(\"Time [Gyr]\")\n",
-    "        ax.tick_params(labelbottom=True)\n",
-    "    if ax.get_subplotspec().is_first_col():\n",
-    "        ax.set_ylabel(r\"SFR [$\\mathrm{M}_\\odot \\, \\mathrm{yr}^{-1}$]\")\n",
+    "    ax.set_ylabel(r\"SFR [$\\mathrm{M}_\\odot \\, \\mathrm{yr}^{-1}$]\")\n",
     "\n",
-    "for i, simulation in enumerate(SAMPLE):\n",
-    "    ax = axs.flatten()[i]\n",
-    "    label = f\"Au{parse(simulation)[0]}\"\n",
-    "    sfr = calculate_sfr_by_region_evolution(simulation)\n",
+    "    label = f\"Au{parse(SIMULATION)[0]}\"\n",
+    "\n",
+    "    sfr = calculate_sfr_by_region_evolution(SIMULATION)\n",
     "    sfr.dropna(inplace=True)\n",
     "    for component in settings.components:\n",
     "        ax.plot(sfr[\"Time_Gyr\"],\n",
     "                savgol_filter(sfr[f\"SFR_Msun/yr_{component}\"], 5, 1),\n",
-    "                c=settings.component_colors[component],\n",
-    "                lw=1.0, label=settings.component_labels[component], zorder=10)\n",
+    "                c=settings.component_colors[component], zorder=10,\n",
+    "                lw=1.0, label=settings.component_labels[component])\n",
     "    ax.plot(sfr[\"Time_Gyr\"], savgol_filter(sfr[\"SFR_Msun/yr\"], 5, 1),\n",
     "            c='k', lw=1.0, label=\"Total\", zorder=10)\n",
-    "    ax.text(x=0.95, y=0.95, size=6.0,\n",
-    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
-    "            ha='right', va='top', transform=ax.transAxes)\n",
     "\n",
-    "    if ax == axs[0, 0]:\n",
-    "        ax.legend(loc=\"lower center\", framealpha=0.0, fontsize=5.0,\n",
-    "                  bbox_to_anchor=(3.5, -4.9), ncol=1)\n",
+    "    ax.legend(loc=\"upper right\", framealpha=0.0, fontsize=5.0,\n",
+    "              bbox_to_anchor=(0.99, 0.5), ncol=1)\n",
     "\n",
-    "    ax.xaxis.label.set_size(8.0)\n",
-    "    ax.yaxis.label.set_size(8.0)\n",
+    "    ax.text(x=0.05, y=0.95, s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "            size=8.0, transform=ax.transAxes, ha='left', va='top')\n",
     "\n",
-    "    fig.savefig(f\"../images/sfr_by_region/included{SUFFIX}.pdf\")\n",
+    "    fig.savefig(\n",
+    "        f\"../images/sfr_by_region/{SIMULATION}{SUFFIX}.pdf\")\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if SAMPLE:\n",
+    "    fig = plt.figure(figsize=(7, 8))\n",
+    "    gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
+    "    axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
-    "plt.close(fig)"
+    "    for ax in axs.flatten():\n",
+    "        ax.tick_params(which='both', direction=\"in\")\n",
+    "        if ax == axs[-1, -1]: ax.axis(\"off\")\n",
+    "        ax.set_xlim(0, 14)\n",
+    "        ax.set_ylim(0.1, 20),\n",
+    "        ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
+    "        ax.set_yscale(\"log\")\n",
+    "        ax.set_yticks([0.1, 1, 10])\n",
+    "        ax.set_yticklabels([0.1, 1, 10])\n",
+    "        if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "            ax.set_xlabel(\"Time [Gyr]\")\n",
+    "            ax.tick_params(labelbottom=True)\n",
+    "        if ax.get_subplotspec().is_first_col():\n",
+    "            ax.set_ylabel(r\"SFR [$\\mathrm{M}_\\odot \\, \\mathrm{yr}^{-1}$]\")\n",
+    "\n",
+    "    for i, simulation in enumerate(SAMPLE):\n",
+    "        ax = axs.flatten()[i]\n",
+    "        label = f\"Au{parse(simulation)[0]}\"\n",
+    "        sfr = calculate_sfr_by_region_evolution(simulation)\n",
+    "        sfr.dropna(inplace=True)\n",
+    "        for component in settings.components:\n",
+    "            ax.plot(sfr[\"Time_Gyr\"],\n",
+    "                    savgol_filter(sfr[f\"SFR_Msun/yr_{component}\"], 5, 1),\n",
+    "                    c=settings.component_colors[component], zorder=10,\n",
+    "                    lw=1.0, label=settings.component_labels[component])\n",
+    "        ax.plot(sfr[\"Time_Gyr\"], savgol_filter(sfr[\"SFR_Msun/yr\"], 5, 1),\n",
+    "                c='k', lw=1.0, label=\"Total\", zorder=10)\n",
+    "        ax.text(x=0.95, y=0.95, size=6.0,\n",
+    "                s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "                ha='right', va='top', transform=ax.transAxes)\n",
+    "\n",
+    "        if ax == axs[0, 0]:\n",
+    "            ax.legend(loc=\"lower center\", framealpha=0.0, fontsize=5.0,\n",
+    "                    bbox_to_anchor=(3.5, -4.9), ncol=1)\n",
+    "\n",
+    "        ax.xaxis.label.set_size(8.0)\n",
+    "        ax.yaxis.label.set_size(8.0)\n",
+    "\n",
+    "        fig.savefig(f\"../images/sfr_by_region/included{SUFFIX}.pdf\")\n",
+    "\n",
+    "    plt.close(fig)"
    ]
   }
  ],
