--- a/scripts/Star Formation (Histogram).ipynb
+++ b/scripts/Star Formation (Histogram).ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,16 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SAMPLE = [f\"au{i}_or_l4\" for i in settings.groups[\"Included\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,34 +138,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figures"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(7, 8))\n",
-    "gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
-    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "SIMULATION = \"au6_or_l4_s127\"\n",
+    "# SIMULATION = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SAMPLE = [f\"au{i}_or_l4\" for i in settings.groups[\"Included\"]]\n",
+    "SAMPLE = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if SIMULATION:\n",
+    "    fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
     "\n",
-    "for ax in axs.flatten():\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
-    "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
+    "    ax.set_axisbelow(True)\n",
+    "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
+    "\n",
     "    ax.set_xlim(0, 14)\n",
-    "    ax.set_ylim(0.1, 20),\n",
     "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
+    "    ax.set_xlabel(\"Time [Gyr]\")\n",
+    "\n",
+    "    ax.set_ylim(0.1, 20)\n",
     "    ax.set_yscale(\"log\")\n",
     "    ax.set_yticks([0.1, 1, 10])\n",
     "    ax.set_yticklabels([0.1, 1, 10])\n",
-    "    if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
-    "        ax.set_xlabel(\"Time [Gyr]\")\n",
-    "        ax.tick_params(labelbottom=True)\n",
-    "    if ax.get_subplotspec().is_first_col():\n",
-    "        ax.set_ylabel(r\"SFR [$\\mathrm{M}_\\odot \\, \\mathrm{yr}^{-1}$]\")\n",
+    "    ax.set_ylabel(r\"SFR [$\\mathrm{M}_\\odot \\, \\mathrm{yr}^{-1}$]\")\n",
     "\n",
-    "for i, simulation in enumerate(SAMPLE):\n",
-    "    ax = axs.flatten()[i]\n",
-    "    sfr = calculate_sfr(simulation)\n",
-    "    label = f\"Au{parse(simulation)[0]}\"\n",
+    "    label = f\"Au{parse(SIMULATION)[0]}\"\n",
+    "\n",
+    "    sfr = calculate_sfr(SIMULATION)\n",
     "    ax.plot(sfr[\"Time_Gyr\"], savgol_filter(sfr[\"SFR_Msun/yr\"], 5, 1),\n",
     "            c='k', lw=1.0, label=\"Total\", zorder=12)\n",
     "    ax.plot(sfr[\"Time_Gyr\"], savgol_filter(sfr[\"SFR_InSitu_Msun/yr\"], 5, 1),\n",
@@ -188,9 +203,67 @@
     "                savgol_filter(sfr[f\"SFR_{component}_InSitu_Msun/yr\"], 5, 1),\n",
     "                c=settings.component_colors[component], ls=(0, (5, 1)), lw=0.5,\n",
     "                zorder=10)\n",
-    "    ax.text(x=0.95, y=0.95, size=6.0,\n",
-    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
-    "            ha='right', va='top', transform=ax.transAxes)\n",
+    "\n",
+    "    ax.legend(loc=\"upper right\", framealpha=0.0, fontsize=5.0,\n",
+    "              bbox_to_anchor=(0.99, 0.5), ncol=1)\n",
+    "\n",
+    "    ax.text(x=0.05, y=0.95, s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "            size=8.0, transform=ax.transAxes, ha='left', va='top')\n",
+    "\n",
+    "    fig.savefig(\n",
+    "        f\"../images/sfr_by_region/histogram_{SIMULATION}{SUFFIX}.pdf\")\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if SAMPLE:\n",
+    "    fig = plt.figure(figsize=(7, 8))\n",
+    "    gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
+    "    axs = gs.subplots(sharex=True, sharey=True)\n",
+    "\n",
+    "    for ax in axs.flatten():\n",
+    "        ax.tick_params(which='both', direction=\"in\")\n",
+    "        if ax == axs[-1, -1]: ax.axis(\"off\")\n",
+    "        ax.set_xlim(0, 14)\n",
+    "        ax.set_ylim(0.1, 20),\n",
+    "        ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
+    "        ax.set_yscale(\"log\")\n",
+    "        ax.set_yticks([0.1, 1, 10])\n",
+    "        ax.set_yticklabels([0.1, 1, 10])\n",
+    "        if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "            ax.set_xlabel(\"Time [Gyr]\")\n",
+    "            ax.tick_params(labelbottom=True)\n",
+    "        if ax.get_subplotspec().is_first_col():\n",
+    "            ax.set_ylabel(r\"SFR [$\\mathrm{M}_\\odot \\, \\mathrm{yr}^{-1}$]\")\n",
+    "\n",
+    "    for i, simulation in enumerate(SAMPLE):\n",
+    "        ax = axs.flatten()[i]\n",
+    "        sfr = calculate_sfr(simulation)\n",
+    "        label = f\"Au{parse(simulation)[0]}\"\n",
+    "        ax.plot(sfr[\"Time_Gyr\"],\n",
+    "                savgol_filter(sfr[\"SFR_Msun/yr\"], 5, 1),\n",
+    "                c='k', lw=1.0, label=\"Total\", zorder=12)\n",
+    "        ax.plot(sfr[\"Time_Gyr\"],\n",
+    "                savgol_filter(sfr[\"SFR_InSitu_Msun/yr\"], 5, 1),\n",
+    "                c='k', ls=(0, (5, 1)), lw=0.5, label=\"In Situ\", zorder=10)\n",
+    "        for component in settings.components:\n",
+    "                ax.plot(sfr[\"Time_Gyr\"],\n",
+    "                        savgol_filter(sfr[f\"SFR_{component}_Msun/yr\"], 5, 1),\n",
+    "                        c=settings.component_colors[component],\n",
+    "                        lw=1.0, label=settings.component_labels[component],\n",
+    "                        zorder=12)\n",
+    "                ax.plot(sfr[\"Time_Gyr\"],\n",
+    "                        savgol_filter(sfr[f\"SFR_{component}_InSitu_Msun/yr\"],\n",
+    "                                        5, 1),\n",
+    "                        c=settings.component_colors[component], ls=(0, (5, 1)),\n",
+    "                        lw=0.5, zorder=10)\n",
+    "        ax.text(x=0.95, y=0.95, size=6.0, s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "                ha='right', va='top', transform=ax.transAxes)\n",
     "\n",
     "    if ax == axs[0, 0]:\n",
     "        ax.legend(loc=\"lower center\", framealpha=0.0, fontsize=5.0,\n",
@@ -201,7 +274,7 @@
     "\n",
     "    fig.savefig(f\"../images/sfr_by_region/histogram_included{SUFFIX}.pdf\")\n",
     "\n",
-    "plt.close(fig)"
+    "    plt.close(fig)"
    ]
   }
  ],
