--- a/scripts/Stellar Mass by Region.ipynb
+++ b/scripts/Stellar Mass by Region.ipynb
@@ -10,19 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
-      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
-      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
@@ -31,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,12 +100,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_galaxy(simulation: str) -> None:\n",
+    "def get_min_and_max_values(sample: list) -> tuple:\n",
+    "    min_vals = np.ones(4, dtype=np.float64)\n",
+    "    max_vals = np.zeros(4, dtype=np.float64)\n",
+    "    for simulation in sample:\n",
+    "        data = get_statistics(read_data(simulation))\n",
+    "        max_vals[data > max_vals] = data[data > max_vals]\n",
+    "        min_vals[data < min_vals] = data[data < min_vals]\n",
+    "    return min_vals, max_vals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SIMULATION = \"au6_or_l4_s127\"\n",
+    "SIMULATION = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAMPLE = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]\n",
+    "# SAMPLE = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if SIMULATION:\n",
     "    settings = Settings()\n",
+    "    min_vals, max_vals = get_min_and_max_values(\n",
+    "        [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]])\n",
     "\n",
     "    fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
     "\n",
@@ -129,14 +164,16 @@
     "    ax.set_yticks([0, 0.2, 0.4, 0.6, 0.8, 1])\n",
     "    ax.set_ylabel(r\"$f_\\star$\")\n",
     "\n",
-    "    label = f\"Au{parse(simulation)[0]}\"\n",
-    "    data = get_statistics(read_data(simulation))\n",
+    "    label = f\"Au{parse(SIMULATION)[0]}\"\n",
+    "    data = get_statistics(read_data(SIMULATION))\n",
     "\n",
     "    for j in range(len(data)):\n",
-    "        ax.bar(x=j, height=data[j],\n",
+    "        yerr = np.abs(\n",
+    "            (np.array([min_vals[j], max_vals[j]]) - data[j]).reshape(2, 1))\n",
+    "        ax.bar(x=j, height=data[j], yerr=yerr,\n",
     "               color=list(settings.component_colors.values())[j],\n",
     "               width=0.5, linewidth=0)\n",
-    "        ax.text(j, data[j] + 0.025,\n",
+    "        ax.text(j, data[j] + yerr[1] + 0.025,\n",
     "                s=r\"$\\textbf{\" + str(int(np.round(100 * data[j], 0))) \\\n",
     "                    + \"\\%\" + \"}$\",\n",
     "                c=list(settings.component_colors.values())[j],\n",
@@ -153,75 +190,64 @@
     "\n",
     "    fig.savefig(\n",
     "        f\"../images/galaxy_decomposition/\"\n",
-    "        f\"stellar_mass_distribution_{simulation}{SUFFIX}.pdf\")\n",
+    "        f\"stellar_mass_distribution_{SIMULATION}{SUFFIX}.pdf\")\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_galaxy(\"au6_or_l4_s127\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulations = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(figsize=(7.4, 7.2), nrows=6, ncols=5,\n",
-    "                        sharey=True, sharex=True,\n",
-    "                        gridspec_kw={\"hspace\": 0.0, \"wspace\": 0.0})\n",
+    "if SAMPLE:\n",
+    "    fig, axs = plt.subplots(figsize=(7, 8), nrows=6, ncols=4,\n",
+    "                            sharey=True, sharex=True,\n",
+    "                            gridspec_kw={\"hspace\": 0.0, \"wspace\": 0.0})\n",
     "\n",
-    "for ax in axs.flat:\n",
-    "    ax.tick_params(which='both', direction=\"in\")\n",
-    "    ax.set_xlim(-0.5, 3.5)\n",
-    "    ax.set_xticks([0, 1, 2, 3])\n",
-    "    ax.set_xticklabels([])\n",
-    "    ax.set_ylim(0, 1)\n",
-    "    ax.set_yticks([0, 0.2, 0.4, 0.6, 0.8])\n",
-    "    ax.set_ylabel(r\"$f_\\star$\")\n",
-    "    ax.label_outer()\n",
+    "    for ax in axs.flat:\n",
+    "        ax.tick_params(which='both', direction=\"in\")\n",
+    "        if ax == axs[-1, -1]: ax.axis(\"off\")\n",
+    "        ax.set_xlim(-0.5, 3.5)\n",
+    "        ax.set_xticks([0, 1, 2, 3])\n",
+    "        ax.set_xticklabels([])\n",
+    "        ax.set_ylim(0, 1)\n",
+    "        ax.set_yticks([0, 0.2, 0.4, 0.6, 0.8])\n",
+    "        ax.set_axisbelow(True)\n",
+    "        if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "            ax.set_xlabel(\"\")\n",
+    "            ax.tick_params(labelbottom=True)\n",
+    "        if ax.get_subplotspec().is_first_col():\n",
+    "            ax.set_ylabel(r\"$f_\\star$\")\n",
     "\n",
-    "for i, simulation in enumerate(simulations):\n",
-    "    data = get_statistics(read_data(simulation))\n",
-    "    current_ax = axs.flatten()[i]\n",
-    "    current_ax.text(\n",
-    "        x=0.05, y=0.95, size=6.0,\n",
-    "        s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
-    "        ha=\"left\", va=\"top\", transform=current_ax.transAxes)\n",
+    "    for i, simulation in enumerate(SAMPLE):\n",
+    "        label = f\"Au{parse(simulation)[0]}\"\n",
+    "        data = get_statistics(read_data(simulation))\n",
+    "        ax = axs.flatten()[i]\n",
+    "        ax.text(\n",
+    "            x=0.05, y=0.95, size=6.0,\n",
+    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "            ha=\"left\", va=\"top\", transform=ax.transAxes)\n",
     "\n",
-    "    for j in range(len(data)):\n",
-    "        current_ax.bar(x=j, height=data[j],\n",
-    "                       color=list(settings.component_colors.values())[j],\n",
-    "                       width=0.5, linewidth=0)\n",
-    "        current_ax.text(j, data[j] + 0.025,\n",
-    "            s=r\"$\\textbf{\" + str(int(np.round(100 * data[j], 0))) \\\n",
-    "                + \"\\%\" + \"}$\",\n",
-    "            c=list(settings.component_colors.values())[j],\n",
-    "            ha=\"center\", va=\"bottom\", size=5.0)\n",
-    "        \n",
-    "        if current_ax.get_subplotspec().is_last_row():\n",
-    "            current_ax.text(j, -0.05, size=6.0,\n",
-    "                            s=r\"$\\textbf{\" + settings.components[j] + \"}$\",\n",
-    "                            c=list(settings.component_colors.values())[j],\n",
-    "                            ha=\"center\", va=\"top\")\n",
+    "        for j in range(len(data)):\n",
+    "            ax.bar(x=j, height=data[j],\n",
+    "                   color=list(settings.component_colors.values())[j],\n",
+    "                   width=0.5, linewidth=0)\n",
+    "            ax.text(j, data[j] + 0.025,\n",
+    "                s=r\"$\\textbf{\" + str(int(np.round(100 * data[j], 0))) \\\n",
+    "                    + \"\\%\" + \"}$\",\n",
+    "                c=list(settings.component_colors.values())[j],\n",
+    "                ha=\"center\", va=\"bottom\", size=5.0)\n",
+    "            \n",
+    "        if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "            ax.text(j, -0.05, size=6.0,\n",
+    "                    s=r\"$\\textbf{\" + settings.components[j] + \"}$\",\n",
+    "                    c=list(settings.component_colors.values())[j],\n",
+    "                    ha=\"center\", va=\"top\")\n",
     "\n",
-    "    fig.savefig(\n",
-    "        f\"../images/galaxy_decomposition/\"\n",
-    "        f\"stellar_mass_distribution{SUFFIX}.pdf\")\n",
+    "        fig.savefig(\n",
+    "            f\"../images/galaxy_decomposition/\"\n",
+    "            f\"stellar_mass_distribution_included{SUFFIX}.pdf\")\n",
     "    plt.close(fig)"
    ]
   }
