Update/add new figures.

--- a/scripts/Stellar Migration.ipynb
+++ b/scripts/Stellar Migration.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -23,19 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
     "from auriga.images import figure_setup\n",
     "from auriga.settings import Settings\n",
-    "from auriga.support import find_indices"
+    "from auriga.support import find_indices\n",
+    "from auriga.parser import parse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,15 +76,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SAMPLE = [f\"au{i}_or_l4\" for i in settings.groups[\"Included\"]]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +145,7 @@
    "source": [
     "migration_matrices = {}\n",
     "\n",
-    "for simulation in SAMPLE:\n",
+    "for simulation in [f\"au{i}_or_l4\" for i in settings.galaxies]:\n",
     "    df = read_data(f\"{simulation}_s127\")\n",
     "\n",
     "    # Find component tag at birth\n",
@@ -184,81 +186,137 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load Results"
+    "## Figures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Read data\n",
-    "# with open(f\"../results/stellar_migration{SUFFIX}.json\", 'r') as f:\n",
-    "#     migration_matrices = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Plot Galaxy"
+    "# Read data\n",
+    "with open(f\"../results/stellar_migration{SUFFIX}.json\", 'r') as f:\n",
+    "    migration_matrices = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SIMULATION = \"au6_or_l4\""
+    "SIMULATION = \"au6_or_l4\"\n",
+    "# SIMULATION = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# migration_matrix = np.array(migration_matrices[SIMULATION]).reshape(4, 4)"
+    "SAMPLE = [f\"au{i}_or_l4\" for i in settings.groups[\"Included\"]]\n",
+    "# SAMPLE = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig = plt.figure(figsize=(3.0, 3.0))\n",
-    "# gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
-    "# ax = gs.subplots(sharex=True, sharey=False)\n",
+    "if SIMULATION:\n",
+    "    migration_matrix = np.array(migration_matrices[SIMULATION]).reshape(4, 4)\n",
     "\n",
-    "# ax.matshow(migration_matrix, cmap=\"viridis\", vmin=0, vmax=100)\n",
+    "    label = f\"Au{parse(SIMULATION)[0]}\"\n",
     "\n",
-    "# ax.set_xlabel(r\"Component at Birth\")\n",
-    "# ax.set_xticks([0, 1, 2, 3])\n",
-    "# ax.set_xticklabels(settings.components)\n",
-    "# ax.tick_params(axis='x', bottom=True, top=False,\n",
-    "#                labelbottom=True, labeltop=False)\n",
+    "    fig = plt.figure(figsize=(3.0, 3.0))\n",
+    "    gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
+    "    ax = gs.subplots(sharex=True, sharey=False)\n",
     "\n",
-    "# ax.set_ylabel(r\"Component at $z=0$\")\n",
-    "# ax.set_yticks([0, 1, 2, 3])\n",
-    "# ax.set_yticklabels(settings.components)\n",
+    "    ax.matshow(migration_matrix, cmap=\"viridis\", vmin=0, vmax=100)\n",
     "\n",
-    "# for i in range(migration_matrix.shape[0]):\n",
-    "#     for j in range(migration_matrix.shape[1]):\n",
-    "#         color = \"white\" if migration_matrix[j, i] < 50 else \"black\"\n",
-    "#         ax.text(\n",
-    "#             i, j,\n",
-    "#             r\"$\\mathbf{\" + f\"{np.round(migration_matrix[j, i], 1)}\" + r\"\\%}$\",\n",
-    "#             c=color, ha=\"center\", va=\"center\")\n",
+    "    ax.set_xlabel(r\"Component at Birth\")\n",
+    "    ax.set_xticks([0, 1, 2, 3])\n",
+    "    ax.set_xticklabels(settings.components)\n",
+    "    ax.tick_params(axis='x', bottom=True, top=False,\n",
+    "                   labelbottom=True, labeltop=False)\n",
     "\n",
-    "# ax.text(x=0.01, y=1.01, size=7.0,\n",
-    "#         s=r\"$\\texttt{\" + f\"{SIMULATION}\".upper() + \"}$\",\n",
-    "#         ha=\"left\", va=\"bottom\", transform=ax.transAxes)\n",
+    "    ax.set_ylabel(r\"Component at $z=0$\")\n",
+    "    ax.set_yticks([0, 1, 2, 3])\n",
+    "    ax.set_yticklabels(settings.components)\n",
     "\n",
-    "# fig.savefig(f\"../images/stellar_migration/{SIMULATION}.pdf\")\n",
-    "# plt.close(fig)"
+    "    for i in range(migration_matrix.shape[0]):\n",
+    "        for j in range(migration_matrix.shape[1]):\n",
+    "            color = \"white\" if migration_matrix[j, i] < 50 else \"black\"\n",
+    "            ax.text(\n",
+    "                i, j,\n",
+    "                r\"$\\mathbf{\" + f\"{np.round(migration_matrix[j, i], 1)}\" + r\"\\%}$\",\n",
+    "                c=color, ha=\"center\", va=\"center\")\n",
+    "\n",
+    "    ax.text(x=0.01, y=1.01, size=7.0,\n",
+    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "            ha=\"left\", va=\"bottom\", transform=ax.transAxes)\n",
+    "\n",
+    "    fig.savefig(f\"../images/stellar_migration/{SIMULATION}{SUFFIX}.pdf\")\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if SAMPLE:\n",
+    "    fig, axs = plt.subplots(figsize=(7, 8), nrows=6, ncols=4,\n",
+    "                            sharey=True, sharex=True,\n",
+    "                            gridspec_kw={\"hspace\": 0.15, \"wspace\": -0.1})\n",
+    "\n",
+    "    for i, simulation in enumerate(SAMPLE):\n",
+    "        label = f\"Au{parse(simulation)[0]}\"\n",
+    "        ax = axs.flatten()[i]\n",
+    "        migration_matrix = np.array(\n",
+    "            migration_matrices[simulation]).reshape(4, 4)\n",
+    "        ax.matshow(migration_matrix, cmap=\"viridis\", vmin=0, vmax=100)\n",
+    "        ax.text(\n",
+    "            x=0.01, y=1.01, size=6.0,\n",
+    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "            ha=\"left\", va=\"bottom\", transform=ax.transAxes)\n",
+    "\n",
+    "        for a in range(migration_matrix.shape[0]):\n",
+    "            for b in range(migration_matrix.shape[1]):\n",
+    "                color = \"white\" if migration_matrix[b, a] < 50 else \"black\"\n",
+    "                ax.text(\n",
+    "                    a, b,\n",
+    "                    r\"$\\mathbf{\" + f\"{np.round(migration_matrix[b, a], 1)}\" \\\n",
+    "                        + r\"\\%}$\",\n",
+    "                    c=color, ha=\"center\", va=\"center\", size=3.5)\n",
+    "\n",
+    "    for ax in axs.flatten():\n",
+    "        ax.tick_params(which='both', direction=\"in\")\n",
+    "        if ax == axs[-1, -1]: ax.axis(\"off\")\n",
+    "        ax.set_xticks([0, 1, 2, 3])\n",
+    "        ax.set_xticklabels(settings.components)\n",
+    "        ax.set_axisbelow(True)\n",
+    "        if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "            ax.set_xlabel(r\"Comp. at Birth\")\n",
+    "            ax.tick_params(axis='x', bottom=True, top=False,\n",
+    "                           labelbottom=True, labeltop=False)\n",
+    "        if ax.get_subplotspec().is_first_col():\n",
+    "            ax.set_yticks([0, 1, 2, 3])\n",
+    "            ax.set_yticklabels(settings.components)\n",
+    "            ax.set_ylabel(r\"Comp. at $z=0$\")\n",
+    "        else:\n",
+    "            ax.tick_params(axis='y', left=False, right=False,\n",
+    "                           labelbottom=False, labeltop=False)\n",
+    "        ax.xaxis.label.set_size(8.0)\n",
+    "        ax.yaxis.label.set_size(8.0)\n",
+    "\n",
+    "    fig.savefig(\n",
+    "        f\"../images/stellar_migration/included{SUFFIX}.pdf\")\n",
+    "    plt.close(fig)"
    ]
   },
   {
