--- a/scripts/Stellar Velocity.ipynb
+++ b/scripts/Stellar Velocity.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "colors = [\"tab:green\", \"tab:red\", \"tab:blue\", 'k']\n",
+    "colors = [\"green\", \"red\", \"blue\", 'k']\n",
     "labels = [\"$v_r$\", r\"$v^\\dagger_z$\", \"$v_\\phi$\", \"$\\sigma_v$\"]\n",
     "features = [\"RadialVelocity\", \"VerticalVelocity\",\n",
     "            \"TangentialVelocity\", \"VelocityDispersion\"]"
@@ -251,8 +251,11 @@
     "                lw=1.0, label=labels[i], zorder=10, c=colors[i])\n",
     "\n",
     "        axs[idx].text(\n",
-    "            x=1.5, y=-80, size=8.0, ha='left', va='bottom',\n",
-    "            s=settings.component_labels[settings.components[idx]])\n",
+    "            x=1.5, y=-80, size=7.0, ha='left', va='bottom',\n",
+    "            color=settings.component_colors[settings.components[idx]],\n",
+    "            s=r\"$\\textbf{\" \\\n",
+    "                + settings.component_labels[settings.components[idx]] \\\n",
+    "                + r\"}$\")\n",
     "\n",
     "    axs[0].legend(loc=\"upper left\", framealpha=0, fontsize=8.0, ncol=2)\n",
     "\n",
@@ -275,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +322,7 @@
     "    #     c, label, zorder = \"tab:purple\", r\"$\\texttt{AU11_OR_L4_S127}$\", 11\n",
     "    #     lw = 1.25\n",
     "    if simulation == \"au6_or_l4_s127\":\n",
-    "        c, label, zorder = \"tab:green\", r\"$\\texttt{Au6}$\", 12\n",
+    "        c, label, zorder = \"black\", r\"$\\texttt{Au6}$\", 12\n",
     "        lw = 1.25\n",
     "    for component, idx in settings.component_tags.items():\n",
     "        for i, feature in enumerate(features):\n",
@@ -337,9 +340,12 @@
     "\n",
     "for component, j in settings.component_tags.items():\n",
     "    axs[0, j].text(\n",
-    "        x=0.5, y=0.95, size=8.0, ha=\"center\", va=\"top\",\n",
+    "        x=0.5, y=0.95, size=9.0, ha=\"center\", va=\"top\",\n",
     "        transform=axs[0, j].transAxes,\n",
-    "        s=settings.component_labels[settings.components[j]])\n",
+    "        color=settings.component_colors[settings.components[j]],\n",
+    "        s=r\"$\\textbf{\" \\\n",
+    "            + settings.component_labels[settings.components[j]] \\\n",
+    "            + r\"}$\")\n",
     "    # for i, feature in enumerate(features):\n",
     "    #     axs[i, j].plot(\n",
     "    #         data[\"BinCenters_ckpc\"],\n",
