Add/update figures.

--- a/scripts/Stellar Origin.ipynb
+++ b/scripts/Stellar Origin.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
@@ -22,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,70 +166,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_in_situ_plot_for_galaxy(simulation: str):\n",
+    "def transform_label(label: str) -> str:\n",
+    "    if label == \"Halo\":\n",
+    "        new_label = 'H'\n",
+    "    elif label == \"Bulge\":\n",
+    "        new_label = 'B'\n",
+    "    elif label == \"Warm\\nDisc\":\n",
+    "        new_label = 'WD'\n",
+    "    elif label == \"Cold\\nDisc\":\n",
+    "        new_label = 'CD'\n",
+    "    else:\n",
+    "        new_label = \"Galaxy\"\n",
+    "    return new_label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_min_and_max_values(sample: list) -> tuple:\n",
+    "    settings = Settings()\n",
+    "\n",
+    "    with open(f\"../results/stellar_origin{SUFFIX}.json\") as f:\n",
+    "        data = json.load(f)\n",
+    "\n",
+    "    COMPONENTS = ['Halo', 'Cold\\nDisc', 'Warm\\nDisc', 'Galaxy', 'Bulge']\n",
+    "\n",
+    "    extreme_vals = []\n",
+    "    for component in COMPONENTS:\n",
+    "        max_val = 0\n",
+    "        min_val = 1\n",
+    "        for simulation in sample:\n",
+    "            idx = data[simulation][\"ComponentLabel\"].index(component)\n",
+    "            if data[simulation][\"BarWidths\"][idx] < min_val:\n",
+    "                min_val = data[simulation][\"BarWidths\"][idx]\n",
+    "            if data[simulation][\"BarWidths\"][idx] > max_val:\n",
+    "                max_val = data[simulation][\"BarWidths\"][idx]\n",
+    "        extreme_vals.append([min_val, max_val])\n",
+    "\n",
+    "    return extreme_vals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAMPLE = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]\n",
+    "\n",
+    "for SIMULATION in SAMPLE:\n",
+    "\n",
     "    # Read data\n",
     "    with open(f\"../results/stellar_origin{SUFFIX}.json\") as f:\n",
-    "        data = json.load(f)[simulation]\n",
+    "        data = json.load(f)[SIMULATION]\n",
     "        bar_widths = np.array(data[\"BarWidths\"])\n",
     "        num_labels = data[\"NumericalLabels\"]\n",
-    "        labels = data[\"ComponentLabel\"]\n",
+    "        labels = [transform_label(label) for label in \\\n",
+    "            data[\"ComponentLabel\"]]\n",
     "        colors = data[\"Colors\"]\n",
     "\n",
-    "    label = f\"Au{parse(simulation)[0]}\"\n",
+    "    galaxy = f\"Au{parse(SIMULATION)[0]}\"\n",
     "\n",
-    "    fig = plt.figure(figsize=(3.0, 2.5))\n",
+    "    if SIMULATION == \"au6_or_l4_s127\":\n",
+    "        extreme_values = np.array(get_min_and_max_values(SAMPLE))\n",
+    "        yerr = 100 * np.abs(\n",
+    "            np.array(\n",
+    "                data[\"BarWidths\"]).reshape(5, 1) - extreme_values).T\n",
+    "    else:\n",
+    "        yerr = None\n",
+    "\n",
+    "    fig = plt.figure(figsize=(3.0, 2.25))\n",
     "    gs = fig.add_gridspec(nrows=1, ncols=1, hspace=0.0, wspace=0.0)\n",
     "    ax = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
     "    ax.label_outer()\n",
     "    ax.tick_params(which='both', direction=\"in\",\n",
-    "                   bottom=False, top=False, left=False, right=False)\n",
+    "                    bottom=False, top=False, left=False, right=False)\n",
     "    ax.set_xlim(0, 100)\n",
     "    ax.set_xticks([0, 20, 40, 60, 80, 100])\n",
+    "    ax.set_xticklabels([0, 0.2, 0.4, 0.6, 0.8, 1.0])\n",
+    "    ax.set_ylim(-0.5, 4.5)\n",
     "    ax.spines['top'].set_visible(False)\n",
     "    ax.spines['right'].set_visible(False)\n",
     "    ax.spines['left'].set_visible(False)\n",
     "\n",
-    "    hbars = ax.barh(y=np.arange(bar_widths.shape[0]),\n",
-    "                    width=100 * bar_widths,\n",
-    "                    color=colors,\n",
-    "                    linewidth=0)\n",
+    "    hbars = ax.barh(y=np.arange(bar_widths.shape[0]), xerr=yerr,\n",
+    "                    width=100 * bar_widths, color=colors, linewidth=0)\n",
     "    padding = 1 if 100 * bar_widths.min() <= 20 else -30\n",
-    "    ax.bar_label(hbars, labels=num_labels, padding=padding, color=\"white\")\n",
-    "    ax.set_yticks(np.arange(bar_widths.shape[0]), labels=labels)\n",
-    "    ax.set_xlabel('In-Situ Star Percentage')\n",
+    "    ax.set_yticks([])\n",
+    "    for i, label in enumerate(labels):\n",
+    "        ax.text(x=2, y=i, size=8.0, ha=\"left\", va=\"center\",\n",
+    "            s=r\"$\\textbf{\" + num_labels[i] + \"}$\", c=\"white\")\n",
+    "        ax.text(\n",
+    "            x=-2, y=i, size=8.0, ha=\"right\", va=\"center\",\n",
+    "            s=r\"$\\textbf{\" + label + \"}$\",\n",
+    "            c=colors[i])\n",
+    "    ax.set_xlabel(r\"$f_\\mathrm{in-situ}$\")\n",
     "\n",
     "    ax.text(x=ax.get_xlim()[0], y=ax.get_ylim()[1],\n",
-    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "            s=r\"$\\texttt{\" + galaxy + \"}$\",\n",
     "            size=9.0, ha='left', va='bottom',\n",
     "            )\n",
     "\n",
-    "    fig.savefig(f\"../images/stellar_origin_by_region/{simulation}{SUFFIX}.pdf\")\n",
+    "    fig.savefig(f\"../images/stellar_origin_by_region/{SIMULATION}{SUFFIX}.pdf\")\n",
     "    plt.close(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "create_in_situ_plot_for_galaxy(simulation=f\"au6_or_l4_s127\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create plots for all galaxies\n",
-    "for i in settings.galaxies:\n",
-    "    create_in_situ_plot_for_galaxy(simulation=f\"au{i}_or_l4_s127\")"
    ]
   }
  ],
