Update notebook, data, and figures.

--- a/scripts/Stellar Origin.ipynb
+++ b/scripts/Stellar Origin.ipynb
@@ -215,13 +215,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAMPLE = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]\n",
-    "\n",
-    "for SIMULATION in SAMPLE:\n",
+    "SAMPLE = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for SIMULATION in [\"au6_or_l4_s127\"]:\n",
     "\n",
     "    # Read data\n",
     "    with open(f\"../results/stellar_origin{SUFFIX}.json\") as f:\n",
@@ -248,11 +255,11 @@
     "\n",
     "    ax.label_outer()\n",
     "    ax.tick_params(which='both', direction=\"in\",\n",
-    "                    bottom=False, top=False, left=False, right=False)\n",
+    "                    bottom=True, top=False, left=False, right=False)\n",
     "    ax.set_xlim(0, 100)\n",
     "    ax.set_xticks([0, 20, 40, 60, 80, 100])\n",
     "    ax.set_xticklabels([0, 0.2, 0.4, 0.6, 0.8, 1.0])\n",
-    "    ax.set_ylim(-0.5, 4.5)\n",
+    "    ax.set_ylim(-0.6, 4.5)\n",
     "    ax.spines['top'].set_visible(False)\n",
     "    ax.spines['right'].set_visible(False)\n",
     "    ax.spines['left'].set_visible(False)\n",
@@ -277,6 +284,80 @@
     "\n",
     "    fig.savefig(f\"../images/stellar_origin_by_region/{SIMULATION}{SUFFIX}.pdf\")\n",
     "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(7, 8))\n",
+    "gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.25, wspace=0.25)\n",
+    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "\n",
+    "for ax in axs.flatten():\n",
+    "    ax.tick_params(which='both', direction=\"in\",\n",
+    "                   bottom=True, top=False, left=False, right=False)\n",
+    "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
+    "    \n",
+    "    ax.set_xlim(0, 100)\n",
+    "    ax.set_xticks([0, 20, 40, 60, 80, 100])\n",
+    "    ax.set_xticklabels([0, 0.2, 0.4, 0.6, 0.8, 1.0])\n",
+    "    \n",
+    "    ax.set_ylim(-0.75, 4.75)\n",
+    "\n",
+    "    ax.spines['top'].set_visible(False)\n",
+    "    ax.spines['right'].set_visible(False)\n",
+    "    ax.spines['left'].set_visible(False)\n",
+    "\n",
+    "    ax.set_xlabel(\"\")\n",
+    "    if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "        ax.set_xlabel(r\"$f_\\mathrm{in-situ}$\")\n",
+    "        ax.tick_params(labelbottom=True)\n",
+    "    if ax.get_subplotspec().is_first_col():\n",
+    "        ax.set_ylabel(\"\")\n",
+    "\n",
+    "for i, simulation in enumerate(SAMPLE):\n",
+    "    # Read data\n",
+    "    with open(f\"../results/stellar_origin{SUFFIX}.json\") as f:\n",
+    "        data = json.load(f)[simulation]\n",
+    "        bar_widths = np.array(data[\"BarWidths\"])\n",
+    "        num_labels = data[\"NumericalLabels\"]\n",
+    "        labels = [transform_label(label) for label in \\\n",
+    "            data[\"ComponentLabel\"]]\n",
+    "        colors = data[\"Colors\"]\n",
+    "\n",
+    "    galaxy = f\"Au{parse(simulation)[0]}\"\n",
+    "\n",
+    "    ax = axs.flatten()[i]\n",
+    "    \n",
+    "    hbars = ax.barh(y=np.arange(bar_widths.shape[0]), xerr=yerr,\n",
+    "                    width=100 * bar_widths, color=colors, linewidth=0)\n",
+    "    padding = 1 if 100 * bar_widths.min() <= 20 else -30\n",
+    "    ax.set_yticks([])\n",
+    "    for i, label in enumerate(labels):\n",
+    "        ax.text(x=2, y=i, size=5.0, ha=\"left\", va=\"center\",\n",
+    "                s=r\"$\\textbf{\" + num_labels[i] + \"}$\", c=\"white\")\n",
+    "\n",
+    "    ax.text(x=ax.get_xlim()[0], y=ax.get_ylim()[1],\n",
+    "            s=r\"$\\texttt{\" + galaxy + \"}$\",\n",
+    "            size=8.0, ha='left', va='bottom',\n",
+    "            )\n",
+    "\n",
+    "for i in range(len(settings.components)):\n",
+    "    text = settings.component_labels[settings.components[i]]\n",
+    "    axs[-2, -1].text(\n",
+    "        x=2, y=0.75 * i - 7, size=7.0, ha=\"left\", va=\"center\",\n",
+    "        s=r\"$\\textbf{\" + text + \"}$\",\n",
+    "        c=settings.component_colors[settings.components[i]])\n",
+    "axs[-2, -1].text(\n",
+    "    x=2, y=0.75 * 4 - 7, size=7.0, ha=\"left\", va=\"center\",\n",
+    "    s=r\"$\\textbf{Galaxy}$\",\n",
+    "    c=\"tab:gray\")\n",
+    "\n",
+    "fig.savefig(f\"../images/stellar_origin_by_region/included{SUFFIX}.pdf\")\n",
+    "plt.close(fig)"
    ]
   }
  ],
