--- a/scripts/Stellar Formation Time.ipynb
+++ b/scripts/Stellar Formation Time.ipynb
@@ -87,20 +87,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "simulations = [f\"au{i}_or_l4_s127\" for i in settings.galaxies]"
+    "SAMPLE = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for simulation in simulations:\n",
+    "for simulation in [\"au6_or_l4_s127\"]:\n",
     "    df = read_data(simulation=simulation)\n",
     "    label = f\"Au{parse(simulation)[0]}\"\n",
     "\n",
@@ -119,7 +119,6 @@
     "        ax.label_outer()\n",
     "\n",
     "    for idx, component in enumerate(settings.components):\n",
-    "\n",
     "        n_stars_comp = (df[\"RegionTag\"] == idx).sum()\n",
     "\n",
     "        hist, bin_edges = np.histogram(\n",
@@ -128,7 +127,7 @@
     "        bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
     "        axs[idx].plot(\n",
     "            bin_centers, hist / n_stars_comp, zorder=12,\n",
-    "            c=settings.component_colors[component], lw=1)\n",
+    "            c=settings.component_colors[component], lw=1.5)\n",
     "\n",
     "        hist, _ = np.histogram(\n",
     "                a=df[\"StellarAge_Gyr\"][\n",
@@ -146,9 +145,12 @@
     "            bin_centers, hist / n_stars_comp, zorder=12,\n",
     "            c='k', lw=0.75, ls=(0, (5, 1.5)), label=\"Ex-Situ Stars\")\n",
     "\n",
-    "        axs[idx].text(x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
-    "                    s=settings.component_labels[settings.components[idx]],\n",
-    "                    transform=axs[idx].transAxes)\n",
+    "        axs[idx].text(\n",
+    "            x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
+    "            s=r\"$\\textbf{\" \\\n",
+    "                + list(settings.component_labels.values())[idx] + \"}$\",\n",
+    "            c=list(settings.component_colors.values())[idx],\n",
+    "            transform=axs[idx].transAxes)\n",
     "\n",
     "    axs[3].legend(loc=\"lower left\", framealpha=0, fontsize=6,\n",
     "                  bbox_to_anchor=(0.009, 0.65))\n",
@@ -161,6 +163,66 @@
     "    fig.savefig(\n",
     "        f\"../images/stellar_formation_time/{simulation}{SUFFIX}.pdf\")\n",
     "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(7, 8))\n",
+    "gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
+    "axs = gs.subplots(sharex=True, sharey=True)\n",
+    "\n",
+    "for ax in axs.flatten():\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
+    "    \n",
+    "    ax.set_xlim(0, 14)\n",
+    "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
+    "    \n",
+    "    ax.set_ylim(0, 0.3),\n",
+    "    ax.set_yticks([0, 0.05, 0.1, 0.15, 0.2, 0.25])\n",
+    "\n",
+    "    if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "        ax.set_xlabel(\"Stellar Age [Gyr]\")\n",
+    "        ax.tick_params(labelbottom=True)\n",
+    "    if ax.get_subplotspec().is_first_col():\n",
+    "        ax.set_ylabel(r\"$f_\\star$\")\n",
+    "\n",
+    "for i, simulation in enumerate(SAMPLE):\n",
+    "    ax = axs.flatten()[i]\n",
+    "    label = f\"Au{parse(simulation)[0]}\"\n",
+    "    df = read_data(simulation=simulation)\n",
+    "    \n",
+    "    for idx, component in enumerate(settings.components):\n",
+    "        n_stars_comp = (df[\"RegionTag\"] == idx).sum()\n",
+    "\n",
+    "        hist, bin_edges = np.histogram(\n",
+    "                a=df[\"StellarAge_Gyr\"][df[\"RegionTag\"] == idx],\n",
+    "                bins=28, range=(0, 14))\n",
+    "        bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
+    "        ax.plot(\n",
+    "            bin_centers, hist / n_stars_comp, zorder=12,\n",
+    "            c=settings.component_colors[component], lw=1,\n",
+    "            label=settings.component_labels[component])\n",
+    "\n",
+    "    ax.text(x=0.05, y=0.95, size=8.0,\n",
+    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "            ha='left', va='top', transform=ax.transAxes)\n",
+    "\n",
+    "    if ax == axs[0, 0]:\n",
+    "        ax.legend(loc=\"lower center\", framealpha=0.0, fontsize=7.0,\n",
+    "                  bbox_to_anchor=(3.5, -5.1), ncol=1)\n",
+    "\n",
+    "    ax.xaxis.label.set_size(8.0)\n",
+    "    ax.yaxis.label.set_size(8.0)\n",
+    "\n",
+    "    fig.savefig(f\"../images/stellar_formation_time/included{SUFFIX}.pdf\")\n",
+    "\n",
+    "plt.close(fig)"
    ]
   }
  ],
