--- a/scripts/Abundance O.ipynb
+++ b/scripts/Abundance O.ipynb
@@ -149,18 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "markers = [\"o\", \"v\", \"^\", \"d\"]\n",
+    "markers = list(settings.component_markers.values())\n",
     "colors = list(settings.component_colors.values())\n",
     "labels = list(settings.component_labels.values())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
