--- a/scripts/FeH Metallicity Distribution.ipynb
+++ b/scripts/FeH Metallicity Distribution.ipynb
@@ -10,9 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/u/fiza/conda-envs/auriga/lib/python3.7/site-packages/setuptools/_importlib.py:23: UserWarning: `importlib-metadata` version is incompatible with `setuptools`.\n",
+      "This problem is likely to be solved by installing an updated version of `importlib-metadata`.\n",
+      "  warnings.warn(msg)  # Ensure a descriptive message is shown.\n"
+     ]
+    }
+   ],
    "source": [
     "from multiprocessing import Pool\n",
     "import os\n",
@@ -29,19 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from auriga.snapshot import Snapshot\n",
-    "from auriga.images import figure_setup, set_axs_configuration\n",
+    "from auriga.images import figure_setup\n",
     "from auriga.settings import Settings\n",
     "from auriga.parser import parse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +70,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DISC_STD_CIRC = settings.disc_std_circ\n",
+    "DISC_MIN_CIRC = settings.disc_min_circ\n",
+    "COLD_DISC_DELTA_CIRC = settings.cold_disc_delta_circ\n",
+    "BULGE_MAX_SPECIFIC_ENERGY = -0.6\n",
+    "SUFFIX = \"_02\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAMPLE = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,10 +102,10 @@
     "\n",
     "    s = Snapshot(simulation=simulation, loadonlytype=[0, 1, 2, 3, 4, 5])\n",
     "    s.tag_particles_by_region(\n",
-    "        disc_std_circ=settings.disc_std_circ,\n",
-    "        disc_min_circ=settings.disc_min_circ,\n",
-    "        cold_disc_delta_circ=settings.cold_disc_delta_circ,\n",
-    "        bulge_max_specific_energy=settings.bulge_max_specific_energy)\n",
+    "        disc_std_circ=DISC_STD_CIRC,\n",
+    "        disc_min_circ=DISC_MIN_CIRC,\n",
+    "        cold_disc_delta_circ=COLD_DISC_DELTA_CIRC,\n",
+    "        bulge_max_specific_energy=BULGE_MAX_SPECIFIC_ENERGY)\n",
     "    s.add_metal_abundance(of, to)\n",
     "    \n",
     "    is_real_star = (s.type == 4) & (s.stellar_formation_time > 0)\n",
@@ -94,16 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulations = [f\"au{i}_or_l4_s127\" for i in range(1, 31)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,6 +134,7 @@
     "    simulation: str, of: str, to: str,\n",
     "    xlim: tuple, ylim: tuple, xticks: list) -> None:\n",
     "\n",
+    "    galaxy = parse(simulation)[0]\n",
     "    df = read_data(simulation=simulation, of=of, to=to, tag_in_situ=True)\n",
     "\n",
     "    fig = plt.figure(figsize=(7.4, 2.0))\n",
@@ -137,7 +161,7 @@
     "        bin_centers = bin_edges[1:] - np.diff(bin_edges)[0] / 2\n",
     "        axs[idx].plot(\n",
     "            bin_centers, hist / n_stars_comp, zorder=11,\n",
-    "            c=settings.component_colors[component], lw=1)\n",
+    "            c=settings.component_colors[component], lw=2)\n",
     "\n",
     "        hist, _ = np.histogram(\n",
     "            a=df[f\"[{of}/{to}]\"][\n",
@@ -155,27 +179,30 @@
     "            bin_centers, hist / n_stars_comp, zorder=11,\n",
     "            c='k', lw=0.75, ls=(0, (5, 1.5)), label=\"Ex-Situ Stars\")\n",
     "\n",
-    "        axs[idx].text(x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
-    "                    s=settings.component_labels[settings.components[idx]],\n",
-    "                    transform=axs[idx].transAxes)\n",
+    "        axs[idx].text(\n",
+    "            x=0.05, y=0.95, size=8.0, ha=\"left\", va=\"top\",\n",
+    "            s=r\"$\\textbf{\" + list(settings.component_labels.values())[idx] \\\n",
+    "                + \"}$\",\n",
+    "            c=list(settings.component_colors.values())[idx],\n",
+    "            transform=axs[idx].transAxes)\n",
     "\n",
     "    axs[3].legend(loc=\"lower left\", framealpha=0, fontsize=6,\n",
     "                    bbox_to_anchor=(0.009, 0.65))\n",
     "\n",
     "    axs[0].text(\n",
-    "        x=0.95, y=0.95, size=6.0,\n",
-    "        s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
+    "        x=0.95, y=0.95, size=8.0,\n",
+    "        s=r\"$\\texttt{\" + f\"Au{galaxy}\" + \"}$\",\n",
     "        ha='right', va='top', transform=axs[0].transAxes)\n",
     "\n",
     "    fig.savefig(\n",
     "        f\"../images/metal_abundance_distribution/{of}_{to}/\"\n",
-    "        f\"with_stellar_origin/{simulation}.pdf\")\n",
+    "        f\"with_stellar_origin/{simulation}{SUFFIX}.pdf\")\n",
     "    plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,20 +210,24 @@
     "    of: str, to: str, xlim: tuple, ylim: tuple,\n",
     "    xticks: list, yticks: list) -> None:\n",
     "\n",
-    "    fig = plt.figure(figsize=(7.4, 7.2))\n",
-    "    gs = fig.add_gridspec(nrows=6, ncols=5, hspace=0.0, wspace=0.0)\n",
+    "    fig = plt.figure(figsize=(7, 8))\n",
+    "    gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
     "    axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
     "    for ax in axs.flat:\n",
     "        ax.tick_params(which='both', direction=\"in\")\n",
+    "        if ax == axs[-1, -1]: ax.axis(\"off\")\n",
     "        ax.set_xlim(xlim)\n",
     "        ax.set_ylim(ylim)\n",
     "        ax.set_xticks(xticks)\n",
     "        ax.set_yticks(yticks)\n",
-    "        ax.set_xlabel(f'[{of}/{to}]')\n",
-    "        ax.set_ylabel(\"PDF\")\n",
     "        ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
-    "        ax.label_outer()\n",
+    "        ax.set_axisbelow(True)\n",
+    "        if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "            ax.set_xlabel(f'[{of}/{to}]')\n",
+    "            ax.tick_params(labelbottom=True)\n",
+    "        if ax.get_subplotspec().is_first_col():\n",
+    "            ax.set_ylabel(\"PDF\")\n",
     "\n",
     "    for i, simulation in enumerate(simulations):\n",
     "        df = read_data(simulation=simulation, of=of, to=to)\n",
@@ -219,26 +250,28 @@
     "                    settings.components[region_tag]],\n",
     "                zorder=15)\n",
     "\n",
+    "        galaxy = parse(simulation)[0]\n",
     "        ax.text(\n",
     "            x=0.95, y=0.95, size=6.0,\n",
-    "            s=r\"$\\texttt{\" + simulation.upper() + \"}$\",\n",
+    "            s=r\"$\\texttt{\" + f\"Au{galaxy}\" + \"}$\",\n",
     "            ha='right', va='top', transform=ax.transAxes)\n",
     "\n",
     "        if i == 0:\n",
     "            ax.legend(loc=\"upper left\", framealpha=0, fontsize=4)\n",
     "\n",
     "        fig.savefig(\n",
-    "            f\"../images/metal_abundance_distribution/{of}_{to}/originals.pdf\")\n",
+    "            f\"../images/metal_abundance_distribution/{of}_{to}/\"\n",
+    "            f\"included{SUFFIX}.pdf\")\n",
     "        plt.close(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for simulation in simulations:\n",
+    "for simulation in [\"au6_or_l4_s127\"]:\n",
     "    plot_distribution_for_galaxy_with_stellar_origin(\n",
     "        simulation, of=\"Fe\", to='H', xlim=(-3, 1.5), ylim=(0, 0.2),\n",
     "        xticks=[-2, -1, 0, 1])"
@@ -246,24 +279,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_distribution_for_sample(\n",
-    "    simulations, of='O', to=\"Fe\",\n",
+    "    SAMPLE, of='O', to=\"Fe\",\n",
     "    xlim=(0, 0.5), ylim=(0, 20),\n",
     "    xticks=[0.1, 0.2, 0.3, 0.4], yticks=[0, 5, 10, 15])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_distribution_for_sample(\n",
-    "    simulations, of=\"Fe\", to='H',\n",
+    "    SAMPLE, of=\"Fe\", to='H',\n",
     "    xlim=(-2, 2), ylim=(0, 2.5),\n",
     "    xticks=[-1, 0, 1], yticks=[0, 0.5, 1, 1.5, 2])"
    ]
