--- a/scripts/FeH Metallicity Distribution.ipynb
+++ b/scripts/FeH Metallicity Distribution.ipynb
@@ -267,14 +267,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "for simulation in [\"au6_or_l4_s127\"]:\n",
     "    plot_distribution_for_galaxy_with_stellar_origin(\n",
     "        simulation, of=\"Fe\", to='H', xlim=(-3, 1.5), ylim=(0, 0.2),\n",
-    "        xticks=[-2, -1, 0, 1])"
+    "        xticks=[-2, -1, 0, 1])\n",
+    "    plot_distribution_for_galaxy_with_stellar_origin(\n",
+    "        simulation, of=\"O\", to='H', xlim=(-3, 1.5), ylim=(0, 0.2),\n",
+    "        xticks=[-2, -1, 0, 1])\n",
+    "    plot_distribution_for_galaxy_with_stellar_origin(\n",
+    "        simulation, of=\"O\", to='Fe', xlim=(-0.3, 0.8), ylim=(0, 0.6),\n",
+    "        xticks=[-0.2, 0, 0.2, 0.4, 0.6])"
    ]
   },
   {
