--- a/scripts/Galaxy Decomposition.ipynb
+++ b/scripts/Galaxy Decomposition.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Decomposition Phase-Space"
+    "#### The Decomposition Phase-Space"
    ]
   },
   {
@@ -108,12 +108,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figures"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_phase_space_for_galaxy(simulation: str) -> None:\n",
+    "\n",
+    "    _, _, _, snapshot = parse(simulation)\n",
+    "    data = np.loadtxt(\n",
+    "        f\"../results/{folder}/phase_space_s{snapshot}{SUFFIX}.txt\")\n",
+    "\n",
     "    fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
     "\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
@@ -161,16 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_phase_space_for_galaxy(\"au6_or_l4_s127\")"
+    "# plot_phase_space_for_galaxy(\"au6_or_l4_s127\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +193,7 @@
     "for ax in axs.flatten():\n",
     "    ax.tick_params(which='both', direction=\"in\")\n",
     "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
-    "    ax.set_xlim(-1.4, 1.4)\n",
+    "    ax.set_xlim(-1.6, 1.6)\n",
     "    ax.set_xticks([-1, 0, 1])\n",
     "    ax.set_ylim(-1, 0)\n",
     "    ax.set_yticks([-.8, -.6, -.4, -.2, 0])\n",
@@ -213,17 +225,14 @@
     "\n",
     "    # Draw lines for the components\n",
     "    ax.plot([DISC_MIN_CIRC] * 2,\n",
-    "            ax.get_ylim(),\n",
-    "            ls=\"--\", c='k')\n",
+    "            ax.get_ylim(), ls=\"--\", c='k', lw=0.75)\n",
     "    ax.plot([DISC_STD_CIRC - COLD_DISC_DELTA_CIRC] * 2,\n",
-    "            ax.get_ylim(),\n",
-    "            ls=\"--\", c='k')\n",
+    "            ax.get_ylim(), ls=\"--\", c='k', lw=0.75)\n",
     "    ax.plot([DISC_STD_CIRC + COLD_DISC_DELTA_CIRC] * 2,\n",
-    "            ax.get_ylim(),\n",
-    "            ls=\"--\", c='k')\n",
+    "            ax.get_ylim(), ls=\"--\", c='k', lw=0.75)\n",
     "    ax.plot([ax.get_xlim()[0], DISC_MIN_CIRC],\n",
     "            [BULGE_MAX_SPECIFIC_ENERGY] * 2,\n",
-    "            ls=\"--\", c='k')\n",
+    "            ls=\"--\", c='k', lw=0.75)\n",
     "\n",
     "    fig.savefig(\n",
     "        f\"../images/galaxy_decomposition/phase_space_included{SUFFIX}.pdf\")\n",
