--- a/scripts/Galaxy Decomposition.ipynb
+++ b/scripts/Galaxy Decomposition.ipynb
@@ -116,15 +116,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_phase_space_for_galaxy(simulation: str) -> None:\n",
     "\n",
     "    _, _, _, snapshot = parse(simulation)\n",
-    "    data = np.loadtxt(\n",
-    "        f\"../results/{folder}/phase_space_s{snapshot}{SUFFIX}.txt\")\n",
     "\n",
     "    fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
     "\n",
@@ -132,7 +130,7 @@
     "    ax.set_axisbelow(True)\n",
     "    ax.grid(True, ls='-', lw=0.25, c='silver')\n",
     "\n",
-    "    ax.set_xlim(-1.4, 1.4)\n",
+    "    ax.set_xlim(-1.6, 1.6)\n",
     "    ax.set_xticks([-1, 0, 1])\n",
     "    ax.set_xlabel(r'$\\epsilon = j_z \\, j_\\mathrm{circ}^{-1}$')\n",
     "\n",
@@ -173,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot_phase_space_for_galaxy(\"au6_or_l4_s127\")"
+    "plot_phase_space_for_galaxy(\"au6_or_l4_s127\")"
    ]
   },
   {
