Rename notebook and update figures.

--- a/scripts/Abundance Distribution.ipynb
+++ b/scripts/Abundance Distribution.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Fe/H] Metallicity Distribution"
+    "# Metal Abundance Distribution"
    ]
   },
   {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,25 +315,25 @@
     "simulation = \"au6_or_l4_s127\"\n",
     "\n",
     "plot_distribution_for_galaxy(simulation,\n",
-    "    of=\"Fe\", to='H', xlim=(-3, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])\n",
+    "    of=\"Fe\", to='H', xlim=(-2.5, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])\n",
     "plot_distribution_for_galaxy(simulation,\n",
     "    of=\"O\", to='H', xlim=(-3, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])\n",
     "plot_distribution_for_galaxy(simulation,\n",
     "    of=\"O\", to='Fe', xlim=(0.0, 0.5), ylim=(0, 20),\n",
     "    xticks=[0.1, 0.2, 0.3, 0.4])\n",
     "plot_distribution_for_galaxy(simulation,\n",
-    "    of=\"Si\", to='H', xlim=(-3, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])\n",
+    "    of=\"Si\", to='H', xlim=(-2.5, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])\n",
     "plot_distribution_for_galaxy(simulation,\n",
     "    of=\"Mg\", to='H', xlim=(-3, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plots for galaxy with stellar origin\n",
+    "# # Plots for galaxy with stellar origin\n",
     "simulation = \"au6_or_l4_s127\"\n",
     "\n",
     "plot_distribution_for_galaxy_with_stellar_origin(simulation,\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,11 +355,25 @@
     "sample = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]\n",
     "\n",
     "plot_distribution_for_sample(\n",
-    "    SAMPLE, of='O', to=\"Fe\", xlim=(0, 0.5), ylim=(0, 20),\n",
+    "    sample, of=\"Fe\", to='H',\n",
+    "    xlim=(-2.5, 1.5), ylim=(0, 2),\n",
+    "    xticks=[-2, -1, 0, 1], yticks=[0, 0.5, 1, 1.5])\n",
+    "plot_distribution_for_sample(\n",
+    "    sample, of='O', to='H',\n",
+    "    xlim=(-3, 1.5), ylim=(0, 2),\n",
+    "    xticks=[-2, -1, 0, 1], yticks=[0, 0.5, 1, 1.5])\n",
+    "plot_distribution_for_sample(\n",
+    "    sample, of='O', to=\"Fe\",\n",
+    "    xlim=(0, 0.5), ylim=(0, 20),\n",
     "    xticks=[0.1, 0.2, 0.3, 0.4], yticks=[0, 5, 10, 15])\n",
     "plot_distribution_for_sample(\n",
-    "    SAMPLE, of=\"Fe\", to='H', xlim=(-2, 2), ylim=(0, 2.5),\n",
-    "    xticks=[-1, 0, 1], yticks=[0, 0.5, 1, 1.5, 2])"
+    "    sample, of=\"Si\", to='H',\n",
+    "    xlim=(-2.5, 1.5), ylim=(0, 2),\n",
+    "    xticks=[-2, -1, 0, 1], yticks=[0, 0.5, 1.0, 1.5])\n",
+    "plot_distribution_for_sample(\n",
+    "    sample, of=\"Mg\", to='H',\n",
+    "    xlim=(-3, 1.5), ylim=(0, 2),\n",
+    "    xticks=[-2, -1, 0, 1], yticks=[0, 0.5, 1.0, 1.5])"
    ]
   }
  ],
